# TargetScout-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  architecture.md  基于靶点情报的 药物研发立项决策支持子智能体 PRD.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: definitions.py  orchestrator.py  setup.py
backend/app/documents/: chunker.py  parser.py  router.py  summarizer.py  vision.py
backend/app/export/: report.py
backend/app/export/fonts/: README.md  download_fonts.sh
backend/app/knowledge/: blob_client.py  cosmos_client.py  embedding.py  search_client.py
backend/app/tools/: clinical_trials.py  knowledge_base.py  pubmed.py  translate.py
backend/tests/: conftest.py  test_clinical_trials.py  test_document_chunker.py  test_document_parser.py  test_document_router.py  test_document_summarizer.py  test_export.py  test_knowledge_base.py  test_pubmed.py  test_vision.py
docs/superpowers/plans/: 2026-04-03-drug-target-agent.md  2026-04-04-ui-redesign.md  2026-04-07-private-document-upload.md  2026-04-10-document-image-understanding.md
docs/superpowers/specs/: 2026-04-04-ui-redesign-design.md  2026-04-07-private-document-upload-design.md  2026-04-10-document-image-understanding-design.md
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  env.d.ts  types.ts
infra/: deploy-config.sh  deploy.sh  provision.sh
mcp-google-scholar/: Dockerfile  google_scholar_server.py  google_scholar_web_search.py  requirements.txt  serve.py
(+13 files in other folders)
